add chosen generators to simulation
